<resources>
    <string name="app_name">gym-manager</string>
    <string name="label_new_member">New member?</string>
    <string name="label_sign_in">Sign In</string>
    <string name="label_welcome_back">Welcome back</string>
    <string name="label_email">Email:</string>
    <string name="label_enter_your_email">Enter Your Email</string>
    <string name="label_password">Password</string>
    <string name="label_enter_your_password">Enter Your Password</string>
    <string name="label_forgot_password">ForgotPassword?</string>
    <string name="label_sign_up">Sign up</string>
    <string name="label_success">Success!</string>
    <string name="label_first_name_format">First name: %s</string>
    <string name="label_last_name_format">Last name: %s</string>
    <string name="label_age_format">Age: %s</string>
    <string name="label_wrong_email">Wrong email or password</string>
    <string name="message_membership_null">Membership doesn\'t exist!</string>
    <string name="message_user_data_null">User not found</string>
    <string name="label_age">Age</string>
    <string name="label_sex">Choose sex</string>git
    <string name="label_login">Login</string>
    <string name="label_already_a_member">Already a member?</string>
    <string name="label_terms">By signing up you agree with our Terms of Use</string>
    <string name="label_create_an_account">Create an account here</string>
    <string name="label_last_name">Last name</string>
    <string name="label_first_name">First name</string>
    <string name="message_cant_register">Registration data is not correct</string>
    <string name="label_male">MALE</string>
    <string name="label_female">FEMALE</string>
    <string name="label_choose_sex">Choose sex</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_ok">Ok</string>
    <string name="label_wrong_email_or_password">Wrong email or password</string>
    <string name="label_wallet">Balance</string>
    <string name="label_topup">Top Up</string>
    <string name="money_format">$%.2f</string>
    <string name="label_how_much">How much money do you want to add?</string>
    <string name="label_money">Money</string>
    <string name="label_hours">Hours</string>
    <string name="dialog_add_to_card">Do you want add this to your cart?</string>
    <string name="label_yes">Yes</string>
    <string name="label_no">No</string>
    <string name="message_cart_empty">Cart is empty</string>
    <string name="label_purchase_successful">Purchase is successful</string>
    <string name="label_purchase_failed">Purchase is failed</string>
    <string name="label_upgrade_membership_dialog">Do you want to upgrade your membership?</string>

    <plurals name="hourse_format">
        <item quantity="zero">%d hour</item>
        <item quantity="one">%d hour</item>
        <item quantity="many">%d hours</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <string name="label_level">Level:</string>
    <string name="label_buy">Buy</string>
    <string name="label_month_duration_format">Membership for %d month plan</string>
    <string name="label_dollars_25">$25.00</string>
    <string name="label_dollars_100">$100.00</string>
    <string name="label_dollars_160">$160.00</string>
    <string name="label_basic_level">Basic</string>
    <string name="label_gold_level">Gold</string>
    <string name="label_premium_level">Premium</string>
    <string name="label_price_format">$%.2f</string>
    <string name="label_membership_was_created">Your membership was successfully created</string>
    <string name="label_price_dont_exist">Price doesn\'t exist!</string>
    <string name="label_body_is_empty">Body is empty</string>
    <string name="label_attention">Attention</string>
    <string name="label_accept">Accept</string>
    <string name="label_decline">Decline</string>

</resources>
