<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvMembership"
        android:layout_width="match_parent"
        android:layout_height="165dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="6dp"
        app:cardBackgroundColor="@color/blue"
        app:cardCornerRadius="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnBuy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="92dp"
                android:backgroundTint="@color/blue2"
                android:text="@string/label_buy"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvMembershipDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:textColor="@color/orange2"
                android:text="@string/label_month_duration_format"
                android:textSize="16sp"
                android:fontFamily="@font/oswald_bold"
                app:layout_constraintStart_toStartOf="@+id/btnBuy"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/oswald_bold"
                android:layout_marginTop="6dp"
                android:text="@string/label_dollars_25"
                android:textColor="@color/orange2"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/tvMembershipDuration"
                app:layout_constraintTop_toBottomOf="@+id/tvMembershipDuration" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvLevel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_basic_level"
                android:textSize="24sp"
                android:textColor="@color/orange2"
                app:layout_constraintHorizontal_bias="1"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/oswald_bold"
                app:layout_constraintBottom_toBottomOf="@+id/btnBuy"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btnBuy"
                app:layout_constraintTop_toTopOf="@+id/btnBuy" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>